--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="dark_blue">#0024A5</color>
     <color name="pink">#DFA0F6</color>
     <color name="purple">#360B4B</color>
+    <color name="sent_msg_bg">#00062B</color>
+    <color name="received_msg_bg">#9F00062B</color>
 </resources>
