--- a/app/src/main/res/layout/item_sent_message.xml
+++ b/app/src/main/res/layout/item_sent_message.xml
@@ -8,7 +8,7 @@
     android:layout_marginTop="16dp">
 
     <TextView
-        android:id="@+id/sent_msg_timestamp"
+        android:id="@+id/msg_timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="8dp"
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@id/sent_msg_text"
+        android:id="@id/msg_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxWidth="260dp"
