--- a/app/src/main/res/layout/item_received_message.xml
+++ b/app/src/main/res/layout/item_received_message.xml
@@ -5,12 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginEnd="8dp"
-    android:layout_marginTop="16dp">
+    android:layout_marginTop="16dp"
+    android:paddingEnd="4dp"
+    android:paddingStart="4dp">
 
     <TextView
         android:id="@+id/msg_timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="8dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:paddingBottom="4dp"
@@ -23,7 +26,6 @@
         android:id="@+id/msg_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
         android:background="@drawable/received_msg_bg"
         android:maxWidth="260dp"
         android:paddingLeft="12dp"
@@ -39,7 +41,7 @@
     <!-- FOR DEBUGGING ONLY   -->
     <TextView
         android:visibility="gone"
-        android:id="@id/sent_msg_text"
+        android:id="@id/msg_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
