--- a/app/src/main/res/layout-land/activity_chat.xml
+++ b/app/src/main/res/layout-land/activity_chat.xml
@@ -10,36 +10,30 @@
         android:id="@+id/chat_contact_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
         android:text="Lebowski"
         android:textAlignment="center"
+        android:paddingTop="5dp"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-        <ListView
-            android:id="@+id/messages_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:divider="@null"
-            android:dividerHeight="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/chat_contact_name"/>
 
     <RelativeLayout
         android:id="@+id/relative_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:translationZ="90dp">
 
         <EditText
             android:id="@+id/input_msg_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toStartOf="@+id/send_msg_btn"
-            android:hint="@string/msg_hint" />
+            android:hint="@string/msg_hint"/>
 
         <Button
             android:id="@+id/send_msg_btn"
@@ -51,5 +45,13 @@
             android:background="@drawable/ic_send_msg" />
     </RelativeLayout>
 
-
+    <ListView
+        android:id="@+id/messages_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chat_contact_name"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
